# android_hardware_ti_omap4

./: Android.mk  README
omx/ducati/domx/: Makefile.am  bootstrap.sh  configure.ac
omx/ducati/domx/system/domx/: Makefile.am  omx_proxy_common.h  omx_rpc.h
omx/ducati/domx/system/mm_osal/: Makefile.am  libmmosal.pc.in
omx/ducati/domx/system/omx_core/: Makefile.am  libOMX_Core.pc.in
omx/ducati/domx/test/: README.camera  README.video
omx/ducati/domx/test/camera/: Makefile.am
omx/ducati/domx/test/daemon/: ClientDaemon.c
omx/ducati/domx/test/h264dec/: Makefile.am
omx/ducati/domx/test/h264enc/: Makefile.am
omx/ducati/domx/test/h264play/: Makefile.am
omx/ducati/domx/test/h264play2/: Makefile.am
omx/ducati/domx/test/jpegdec/: Makefile.am
omx/ducati/domx/test/mpeg4dec/: Makefile.am
omx/ducati/domx/test/mpeg4enc/: Makefile.am
omx/ducati/domx/test/sample_proxy/: Makefile.am  test_sample_proxy.c
syslink/syslink/: Makefile.am  bootstrap.sh  config.h  configure.ac  syslink.pc.in
syslink/syslink/api/: Makefile.am
syslink/syslink/api/include/: Atomic_Ops.h  Bitops.h  Cache.h  Gate.h  GateMPDrv.h  GateMPDrvDefs.h  GateMutex.h  Heap.h  HeapBufMPDrv.h  HeapBufMPDrvDefs.h  HeapMemMPDrv.h  HeapMemMPDrvDefs.h  IGateProvider.h  IHeap.h  IMessageQTransport.h  IObject.h  IPCManager.h  IpcCmdBase.h  IpcDrv.h  IpcDrvDefs.h  IpcUsr.h  List.h  ListMPDrv.h  ListMPDrvDefs.h  Makefile.am  Memory.h  MemoryDefs.h  MemoryOS.h  MessageQDrv.h  MessageQDrvDefs.h  MultiProcDrv.h  MultiProcDrvDefs.h  NameServerDrv.h  NameServerDrvDefs.h  NameServerRemote.h  NotifyDrvDefs.h  NotifyDrvUsr.h  OsalDrv.h  OsalMutex.h  OsalPrint.h  (+77 more)
syslink/syslink/api/make/: Makefile.am  build.mk  start.mk
syslink/syslink/api/src/: Makefile  Makefile.am
syslink/syslink/api/src/ipc/: Android.mk  GateMP.c  GateMPDrv.c  Heap.c  HeapBufMP.c  HeapBufMPDrv.c  HeapMemMP.c  HeapMemMPDrv.c  IPCManager.c  List.c  ListMP.c  ListMPDrv.c  Makefile  Makefile.am  MessageQ.c  MessageQDrv.c  MultiProc.c  MultiProcDrv.c  NameServer.c  NameServerDrv.c  SharedRegion.c  SharedRegionDrv.c
syslink/syslink/api/src/notify/: Android.mk  Makefile  Makefile.am  Notify.c  NotifyDrvUsr.c
syslink/syslink/api/src/procmgr/: Makefile  Makefile.am  ProcDEH.c  ProcMMU.c  ProcMgr.c  ProcMgrDrvUsr.c  SysLinkMemUtils.c
syslink/syslink/api/src/rcm/: Android.mk  Makefile  Makefile.am  RcmClient.c  RcmServer.c
syslink/syslink/api/src/sysmgr/: Android.mk  Ipc.c  IpcDrv.c  Makefile  Makefile.am
syslink/syslink/api/src/utils/: Android.mk  Cache.c  Gate.c  GateMutex.c  Heap.c  List.c  Makefile  Makefile.am  Memory.c  MemoryOS.c  OsalDrv.c  OsalMutex.c  OsalPrint.c  OsalSemaphore.c  String.c  Trace.c  TraceDrv.c  UsrUtilsDrv.c
syslink/syslink/d2c/: Android.mk  Makefile.am  bootstrap.sh  configure.ac  debug_utils.h  libd2cmap.pc.in  list_utils.h  phase1_d2c_remap.c  phase1_d2c_remap.h  testlib.h  utils.h
syslink/syslink/d2c/tests/: Android.mk  Makefile.am  d2c_test.c  testlib.c
syslink/syslink/daemons/: Makefile  Makefile.am
syslink/syslink/daemons/inc/: CrashInfo.h  Makefile.am  TilerMgrServer_config.h
syslink/syslink/daemons/make/: build.mk  start.mk
syslink/syslink/daemons/syslink/: Android.mk  Makefile  Makefile.am  SyslinkDaemon.c
syslink/syslink/daemons/trace/: Android.mk  Makefile  Makefile.am  SyslinkTraceDaemon.c
syslink/syslink/samples/: Makefile  Makefile.am
syslink/syslink/samples/deh/: Android.mk  Makefile  Makefile.am  dehApp.c  dehApp_config.h  dehOS.c
syslink/syslink/samples/dmm/: Android.mk  Makefile  Makefile.am  dmmtestapp.c
syslink/syslink/samples/event_listener/: Android.mk  Makefile  Makefile.am  event_listener.c
syslink/syslink/samples/inc/: ConfigNonSysMgrSamples.h  HeapBufApp.h  HeapBufMPApp.h  HeapMemMPApp.h  MemAllocTest_Config.h  RcmTest_Config.h  SharedRegionApp.h  errbase.h  gpptypes.h  ipctypes.h  notifyxfer_os.h
syslink/syslink/samples/interm3/: Android.mk  Makefile  Makefile.am  interm3.c
syslink/syslink/samples/ipc/: Makefile  Makefile.am
syslink/syslink/samples/ipc/gateMP/: Makefile.am
syslink/syslink/samples/ipc/messageQ/: Makefile.am
syslink/syslink/samples/make/: Makefile.am  build.mk  start.mk
syslink/syslink/samples/memmgr/: Android.mk  Makefile  Makefile.am  MemMgrServer.c
syslink/syslink/samples/notify/: Makefile.am  samples_build
syslink/syslink/samples/notify/notifyping/: Android.mk  Makefile  Makefile.am  notifyping.c
syslink/syslink/samples/notify/notifyxfer/: Makefile  notifyxfer.c  notifyxfer_os.c
syslink/syslink/samples/procmgr/: Makefile  Makefile.am
syslink/syslink/samples/procmgr/ducati_load/: Android.mk  Makefile  Makefile.am  ducati_load.c  getopt.c  getopt_test.h
syslink/syslink/samples/procmgr/procmgrapp/: Android.mk  Makefile  Makefile.am  ProcMgrApp.c  ProcMgrAppOS.c
syslink/syslink/samples/pwrmgmt/: Makefile  Makefile.am
syslink/syslink/samples/pwrmgmt/pmgeneric/: Android.mk  Makefile  Makefile.am  slpmtestApp.c  slpmtestApp_config.h  slpmtestOS.c
syslink/syslink/samples/pwrmgmt/pmresources/: Android.mk  Makefile  Makefile.am  slpmresourcesApp.c  slpmresourcesApp_config.h  slpmresourcesOS.c
syslink/syslink/samples/pwrmgmt/pmtransport/: Android.mk  Makefile  Makefile.am  slpmtransportApp.c  slpmtransportApp_config.h  slpmtransportOS.c
syslink/syslink/samples/rcm/: Makefile.am
syslink/syslink/samples/rcm/multi_test/: Android.mk  Makefile  Makefile.am  RcmClientServerTest.c  (+2 more)
syslink/syslink/samples/tiler/: Android.mk  Makefile  Makefile.am  TilerSyslinkApp.c  TilerSyslinkApp.h  TilerTestApp.c
syslink/syslink/samples/utils/: Android.mk  GateTest.c  ListTest.c  Makefile  Makefile.am  MemoryTest.c  utilsApp.c
syslink/syslink/scripts/: install_ducati_syslink  install_syslink  uninstall_ducati_syslink  uninstall_syslink
tiler/: .gitignore  Android.mk  Makefile.am  README  bootstrap.sh  configure.ac  debug_utils.h  fill_utr.py  libtimemmgr.pc.in  list_utils.h  mem_types.h  memmgr.c  memmgr.h  memmgr_test.c  testlib.c  testlib.h  tiler.h  tiler_ptest.c  tilermem.h  tilermem_utils.h  tilermgr.c  tilermgr.h  utils.h  utils_test.c
(+326 files in other folders)
