#
#  syslink/samples/Makefile.am
#
#  SysLink Samples Top Level Makefile.am file.
#
#  Copyright 2008-2011 Texas Instruments - http://www.ti.com/
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#
#  ----------------------------------------------------------------------------
#  Revision History
#
#
#      REF=ORG
#      Original version.
#  ----------------------------------------------------------------------------
SUBDIRS  = \
	make \
	ipc \
	notify \
	procmgr \
	rcm \
	tiler \
	pwrmgmt \
	interm3 \
	event_listener \
	dmm \
	memmgr \
	deh
