## Process this file with automake to produce Makefile.in

SUBDIRS                 = omx_proxy_common/src omx_rpc/src

noinst_LTLIBRARIES      = libsrc.la

libsrc_la_SOURCES       = 
libsrc_la_LDFLAGS       = -no-undefined
libsrc_la_LIBADD        = omx_proxy_common/src/libomx_proxy_common.la omx_rpc/src/libomx_rpc.la

